Fixed p spacing

--- a/stylesheets/ross.css
+++ b/stylesheets/ross.css
@@ -6,7 +6,7 @@ body{font-family: 'Oxygen', sans-serif;
         font-size:14px;
 }
 
-p  {margin-top:.5em; max-width:546px;}
+p  {margin-top:1.25em; max-width:546px;}
 #disqus_thread{ margin-top:2em; max-width:546px;}
 h1{font-family: 'Archivo Black', sans-serif;
 margin-top: 2em;}
